[tool.poetry]
name = "evm contract tracker"
version = "0.1.0"
description = "This program tracks a specified EVM Contract and notifies when a specified condition is met."
authors = ["Ivan Kyulev"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
web3 = "^6.2.0"
python-dotenv = "^1.0.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
